fix: more readable mermaid diagrams

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,3 +2,9 @@
   max-height: 300px;
   overflow-y: scroll;
 }
+
+.mermaid {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0px 25px 0px;
+}
